Swagger doc completed
